# Test-cookiecutter-cpp-cmake-conan

./: CMakeLists.txt  README.md  README_docker.md  conanfile.txt
.devcontainer/dockerfile/: Dockerfile
configured_files/: config.hpp.in
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  tests.cpp
